# PositionTape

./: .gitignore  AGENTS.md  AGENT_RUN_LOG.md  BOOTSTRAP_FILE_LIST.txt  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PositionTape.DotNet.slnx  PositionTape.code-workspace  PositionTape.slnx  README.md  SECURITY.md  SPEC-COMPLIANCE.md
.agents/plugins/: marketplace.json
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: conformance_failure.yml
.github/workflows/: conformance.yml  polyglot-experimental.yml  polyglot-verified.yml
codex/config/: position-tape.high-autonomy-network.config.toml  position-tape.high-autonomy.config.toml  position-tape.safe.config.toml
codex/prompts/: 00-bootstrap-goal.md  01-reference-triad.md  02-logger-first.md  03-genkidama-wave-1.md
commercial/: README.md
docs/agent-history/: GEN-PT-018-flat-patch.md  GEN-PT-019-polyglot-ci.md
docs/agentic-plan/: APPROVALS_AND_PERMISSIONS.md  IAIAOH_REVIEW_PROTOCOL.md  MVP_DELIVERY_PLAN.md  OPEN_SOURCE_BOUNDARIES.md
fixtures/: manifest.generated.json  position_tape_100.txt  position_tape_1000.txt  position_tape_10000.txt  position_tape_10000_marker_complete.txt  position_tape_101.txt  position_tape_150.txt  position_tape_99.txt  position_tape_manifest.json  sha256-vectors.json
languages/cpp/: CHANGELOG.md  CMakeLists.txt  README.md  SPEC-COMPLIANCE.md
languages/cpp/examples/: basic.cpp
languages/cpp/src/: position_tape.hpp
languages/cpp/tests/: position_tape_tests.cpp
scripts/: setup-windows.ps1  setup-wsl.sh  verify-fixtures.ps1  verify-fixtures.sh
(+234 files in other folders)
